Add ctrl to shortcuts

--- a/kitty.conf
+++ b/kitty.conf
@@ -3,6 +3,6 @@
 include current-theme.conf
 # END_KITTY_THEME
 
-map f1 launch --cwd=current
-map f2 launch --cwd=current --type=tab
+map ctrl+f1 launch --cwd=current
+map ctrl+f2 launch --cwd=current --type=tab
 
