Use Fira Code font

--- a/kitty.conf
+++ b/kitty.conf
@@ -6,3 +6,11 @@ include current-theme.conf
 map ctrl+f1 launch --cwd=current
 map ctrl+f2 launch --cwd=current --type=tab
 
+font_family      Fira Code
+bold_font        FiraCode-Bold
+italic_font      auto
+bold_italic_font auto
+
+font_features FiraCode-Retina +zero +onum
+
+font_size	14.0
